--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <h1>Prueba GIT</h1>
-    <p>Prueba Rama Desarrollo</p>
+    <p>Primer Prueba Rama Desarrollo</p>
+    <p>Segunda Prueba Rama Desarrollo</p>
     
 </body>
 </html>
