--- a/registro.html
+++ b/registro.html
@@ -1,2 +1,3 @@
 <h1>Este es un ejemplo de la rama desarrollo</h1>
 <h2>Este es un ejemplo de la rama desarrollo en local</h2>
+<h3>Este es un ejemplo de la rama desarrollo en local 2</h3>
