--- a/index.html
+++ b/index.html
@@ -6,13 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prueba Git</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" 
+        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 </head>
+
 <body>
     <h1>Prueba GIT</h1>
     
-    <p>Primer Prueba Rama Desarrollo</p>
-    <p>Segunda Prueba Rama Desarrollo</p>
-    <p>Tercer Prueba Rama Desarrollo</p>
+    <div class="container">
+        <div class="row">
+            <div class="col-2 columna"> Column </div>
+            <div class="col-2 columna"> Column </div>
+            <div class="col-8 columna"> Column </div>
+        </div>
     
+      </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" 
+        integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin= "anonymous"></script>
 </body>
 </html>
